<resources>
    <string name="app_name">Mobile Messaging Example</string>

    <string name="erase_inbox">Erase inbox</string>
    <string name="message_count_default">0</string>

    <string name="total_received">Total Received:</string>
    <string name="title_activity_inspect">Inspect</string>

    <!-- Strings related to Inspect -->
    <string name="action_inspect">Inspect</string>

    <!-- General settings -->
    <string name="pref_header_information">Information</string>

    <string name="pref_title_infobip_registration_id">Device application instance ID</string>
    <string name="pref_default_infobip_registration_id">N/A</string>

    <string name="pref_title_application_code">Application code</string>
    <string name="pref_default_application_code">N/A</string>

    <string name="pref_title_gcm_registration_id">GCM registration ID</string>
    <string name="pref_default_gcm_registration_id">N/A</string>

    <string name="pref_title_gcm_registration_id_reported">GCM registration ID reported</string>
    <string name="pref_description_gcm_registration_id_reported">GCM registration ID is reported to Infobip server</string>

    <string name="pref_title_gcm_sender_id">GCM sender ID</string>
    <string name="pref_default_gcm_sender_id">N/A</string>

    <string name="pref_title_last_api_error">Last API error</string>
    <string name="pref_title_last_validation_error">Last validation error</string>

    <string name="pref_title_msisdn_reported">MSISDN reported</string>
    <string name="pref_title_msisdn_sync_error">MSISDN sync errors</string>
    <!-- /General settings -->

    <!-- Settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Settings for Notifications -->
    <string name="pref_header_personal">Settings</string>

    <string name="pref_title_msisdn">MSISDN</string>
    <string name="pref_description_msisdn_reported">MSISDN is reported to Infobip server</string>
    <string name="pref_title_user_id">User ID (external)</string>

    <!-- Toast messages -->
    <string name="toast_message_userdata_invalid">User data is invalid</string>
    <string name="toast_missing_user_id">Please provide external user ID</string>
    <string name="toast_message_userdata_cannot_save">Cannot save user data</string>
    <string name="toast_message_userdata_set">User data is set</string>
    <string name="toast_message_received">"Message received: %s"</string>
    <string name="toast_notification_tapped">"Notification tapped: %s"</string>
    <string name="toast_notification_action_tapped">"Notification action tapped: %s"</string>

    <!-- Strings related to Reply -->
    <string name="reply_close_label">Close</string>
    <string name="reply_sender_placeholder">Sender</string>

    <!--Strings related to notification actions-->
    <string name="action_mark_seen">Mark as read</string>
    <string name="action_reply">Reply</string>
    <string name="action_coupon">Checkout great offer</string>

    <string name="error_api_comm_unknown">Unknown API communication error</string>

    <string name="gps_dialog_title">Google Play Services</string>
    <string name="gps_dialog_message">This device is not supported by Google Play Services. Mobile Messaging Example won\'t run without Google Play Services.</string>
    <string name="gps_dialog_dismiss">Dismiss</string>

    <string name="saved_to_clipboard">Text saved to clipboard</string>
    <string name="no_message_provided">No message provided</string>

</resources>
