<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
            android:key="org.infobip.mobile.messaging.infobip.REGISTRATION_ID"
            android:title="@string/pref_title_infobip_registration_id"
            android:defaultValue="@string/pref_default_infobip_registration_id"
            android:selectAllOnFocus="true"
            android:inputType="text"
            android:capitalize="none"
            android:singleLine="true"
            android:maxLines="1"
    />
    <Preference
            android:key="org.infobip.mobile.messaging.infobip.APPLICATION_CODE"
            android:title="@string/pref_title_application_code"
            android:defaultValue="@string/pref_default_application_code"
            android:selectAllOnFocus="true"
            android:inputType="text"
            android:capitalize="none"
            android:singleLine="true"
            android:maxLines="1"
    />
    <Preference
            android:key="org.infobip.mobile.messaging.gcm.REGISTRATION_ID"
            android:title="@string/pref_title_gcm_registration_id"
            android:defaultValue="@string/pref_default_gcm_registration_id"
            android:selectAllOnFocus="true"
            android:inputType="text"
            android:capitalize="none"
            android:singleLine="true"
            android:maxLines="1"
    />

    <SwitchPreference
            android:key="org.infobip.mobile.messaging.gcm.GCM_REGISTRATION_ID_SAVED"
            android:title="@string/pref_title_gcm_registration_id_saved"
            android:summary="@string/pref_description_gcm_registration_id_saved"
            android:defaultValue="false"/>

    <Preference
            android:key="org.infobip.mobile.messaging.gcm.GCM_SENDER_ID"
            android:title="@string/pref_title_gcm_sender_id"
            android:defaultValue="@string/pref_default_gcm_sender_id"
            android:selectAllOnFocus="true"
            android:inputType="text"
            android:capitalize="none"
            android:singleLine="true"
            android:maxLines="1"
    />
</PreferenceScreen>
