<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="org.infobip.mobile.messaging.demo.APP_CODE"
        android:title="@string/pref_title_application_code"
        android:defaultValue="@string/infobip_application_code"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="none"
        android:singleLine="true"
        android:maxLines="1" />
    <Preference
        android:key="org.infobip.mobile.messaging.demo.GCM_SENDER_ID"
        android:title="@string/pref_title_gcm_sender_id"
        android:defaultValue="@string/google_app_id"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="none"
        android:singleLine="true"
        android:maxLines="1" />
    <Preference
        android:key="org.infobip.mobile.messaging.demo.GCM_TOKEN"
        android:title="@string/pref_title_gcm_registration_id"
        android:defaultValue="@string/pref_default_gcm_registration_id"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="none"
        android:singleLine="true"
        android:maxLines="1" />
    <Preference
        android:key="org.infobip.mobile.messaging.demo.INFOBIP_REGISTRATION_ID"
        android:title="@string/pref_title_infobip_registration_id"
        android:defaultValue="@string/pref_default_infobip_registration_id"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="none"
        android:singleLine="true"
        android:maxLines="1" />
    <Preference
        android:key="org.infobip.mobile.messaging.demo.LAST_API_COMMUNICATION_ERROR"
        android:title="@string/pref_title_last_api_error"
        android:defaultValue="No errors found"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:capitalize="none"
        android:singleLine="true"
        android:maxLines="50" />
</PreferenceScreen>
