<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
            android:key="org.infobip.mobile.messaging.demo.NOTIFICATION_ENABLED"
            android:title="@string/pref_title_new_message_notifications"
            android:defaultValue="true"/>

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
            android:dependency="org.infobip.mobile.messaging.demo.NOTIFICATION_ENABLED"
            android:key="org.infobip.mobile.messaging.demo.NOTIFICATION_SOUND"
            android:title="@string/pref_title_ringtone"
            android:ringtoneType="notification"
            android:defaultValue="content://settings/system/notification_sound"/>

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
            android:dependency="org.infobip.mobile.messaging.demo.NOTIFICATION_ENABLED"
            android:key="org.infobip.mobile.messaging.demo.NOTIFICATION_VIBRATE"
            android:title="@string/pref_title_vibrate"
            android:defaultValue="true"/>

</PreferenceScreen>
